# FakeLDAT

./: .gitignore  README.md  platformio.ini
hardware/: README.md
software/: graph_realtime.py  test.html
software/data-graph/: main.py
software/fakeldat-analyzer/: Cargo.toml
software/fakeldat-analyzer/src/: main.rs
software/fakeldat-app/: Cargo.toml
software/fakeldat-app/cli/: Cargo.toml
software/fakeldat-app/cli/src/: main.rs
software/fakeldat-app/fakeldat_lib/: Cargo.toml
software/fakeldat-app/fakeldat_lib/src/: lib.rs
software/fakeldat-app/gui/: Cargo.toml
software/fakeldat-app/gui/src/: main.rs
software/fakeldat-app/gui/src/ui/: enums.rs  mod.rs
software/fakeldat-gui/: Cargo.toml
software/fakeldat-gui/fakeldat_lib/src/: lib.rs
software/fakeldat-gui/gui/: Cargo.toml
software/fakeldat-gui/gui/src/: app.rs  main.rs
software/fakeldat-gui/gui/src/ui/: enums.rs  mod.rs
src/: config.h  fakeldat.h  main.cpp  types.h
