[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fakeldat-gui"
path = "src/main.rs"

[dependencies]
fakeldat_lib = { path = "../fakeldat_lib" }
iced = { git = "https://github.com/iced-rs/iced.git", rev = "ee105e3bee1bc676dcf3324693984ccda8e4e733", features = ["tiny-skia", "canvas", "tokio"], default-features = false}
# iced = { git = "https://github.com/iced-rs/iced.git", rev = "ee105e3bee1bc676dcf3324693984ccda8e4e733", features = ["wgpu", "canvas", "tokio"], default-features = false}
plotters-iced = { path = "../external/plotters-iced" }
plotters = "0.3"
rfd = "0.14.1"
chrono = "0.4.37"
